--- a/JobPortal.WebApp/Areas/Admin/Views/AppUser/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/AppUser/Index.cshtml
@@ -12,7 +12,7 @@
                     <h4 class="card-title" style="text-align:center">List Account With Role</h4>
                     <br />
                     <div class="table-responsive">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="text-align: center">
                             <thead>
                                 <tr>
                                     <th>
