--- a/JobPortal.WebApp/Areas/Admin/Views/Category/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Category/Index.cshtml
@@ -28,7 +28,7 @@
                             </script>
                         }
                         <div class="table-responsive text-nowrap">
-                            <table class="table table-bordered">
+                            <table class="table table-bordered" style="text-align: center">
                                 <thead>
                                     <tr>
                                         <th>
