--- a/JobPortal.WebApp/Areas/Admin/Views/Role/ListRoles.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Role/ListRoles.cshtml
@@ -13,7 +13,7 @@
                         <a class="btn btn-primary" asp-action="CreateRole">Create new role</a>
                     </p>
                     <div class="table-responsive">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="text-align: center">
                             <thead>
                                 <tr>
                                     <th>
