--- a/JobPortal.WebApp/Areas/Admin/Views/Title/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Title/Index.cshtml
@@ -38,7 +38,7 @@
                             </script>
                         }
                         <div class="table-responsive ">
-                            <table class="table table-bordered">
+                            <table class="table table-bordered" style="text-align: center">
                                 <thead>
                                     <tr>
                                         <th>
