--- a/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
@@ -25,7 +25,7 @@
                     </ul>
                     <br />
                     <div class="table-responsive">
-                        <table  class="table table-bordered">
+                        <table  class="table table-bordered" style="text-align: center">
                             <thead>
                                 <tr>
                                     <th>
