--- a/JobPortal.WebApp/Areas/Admin/Views/Home/ListEmployer.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Home/ListEmployer.cshtml
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <div class="table-responsive">
                         <h1 class="text-center">List Employer</h1>
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="text-align: center">
                             <thead>
                                 <tr>
                                     <th>
