--- a/JobPortal.WebApp/Areas/Admin/Views/Skill/Update.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Skill/Update.cshtml
@@ -51,9 +51,9 @@
                                     <input asp-for="Name" class="form-control" />
                                     <span asp-validation-for="Name" class="text-danger"></span>
                                 </div>
-                                <div class="form-group">
-                                    <img id="blah" src="https://localhost:7211/images/skills/@Model.Logo" alt="your logo" style="width: 350px;" />
-                                    <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#exampleModal">Change logo</a>
+                                <div class="form-group" style="text-align: center">
+                                    <img id="blah" src="https://localhost:7211/images/skills/@Model.Logo" alt="your logo" style="width: 390px;" />
+                                    <a style="margin-top: 10px" class="btn btn-primary" href="#" data-toggle="modal" data-target="#exampleModal">Change logo</a>
                                 </div>
                                 <br />
                                 <div class="form-group text-center" style="margin-bottom: 15px">
