--- a/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
@@ -44,7 +44,7 @@
                         }
 
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered">
+                            <table class="table table-striped table-bordered" style="text-align: center">
                                 <thead>
                                     <tr>
                                         <th>
