--- a/JobPortal.WebApp/Views/Apply/ListApplies.cshtml
+++ b/JobPortal.WebApp/Views/Apply/ListApplies.cshtml
@@ -328,7 +328,7 @@
                                             }
                                         </div>
                                     </section>
-                                    <table class="table table-bordered">
+                                        <table class="table table-bordered" style="text-align: center">
                                         <thead>
                                             <tr>
                                                 <th>Employer</th>
@@ -341,8 +341,7 @@
                                         <tbody id="items">
                                             <tr class="targetfields">
                                                 <td class="table-content">
-                                                    <img src="https://localhost:7211/images/employers/@CV.EmployerLogo"
-                                                     alt="@CV.JobName">
+                                                    <img src="https://localhost:7211/images/employers/@CV.EmployerLogo" alt="@CV.JobName">
                                                 </td>
                                                 <td class="table-content">
                                                         <span style="font-size: 16px; font-weight: bold;">@CV.JobName</span>
@@ -374,6 +373,7 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
     <script>
         function onDelete(id) {
             Swal.fire({
